--- a/src/scss/global/mixins.scss
+++ b/src/scss/global/mixins.scss
@@ -1,9 +1,9 @@
-@mixin font-face($font-family, $url, $weight, $style) {
+@mixin font-face($font-name, $font-path, $font-weight, $font-style) {
   @font-face {
-    font-family: "#{$font-family}";
-    src: url('../fonts/#{$url}.woff2') format("woff2");
-    font-weight: #{$weight};
-    font-display: swap;
-    font-style: $style;
+    font-family: $font-name;
+    font-style: $font-style;
+    font-weight: $font-weight;
+    src: url('#{$font-path}.woff2') format('woff2'),
+    url('#{$font-path}.woff') format('woff');
   }
 }
