--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -1,7 +1,37 @@
+html {
+  height: 100%;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5 {
   font-family: 'Russo One', sans-serif;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  clip-path: inset(100%);
+  overflow: hidden;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  clip: rect(0 0 0 0);
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
