Import styles to main.scss

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,11 @@
 //global
-@import "./global/normalize.css";
-@import "./global/mixins.scss";
-@import "./global/variables.scss";
-@import "./global/fonts.scss";
-@import "./global/global.scss";
+@import "~normalize.css/normalize";
+@import "global/mixins.scss";
+@import "global/variables.scss";
+@import "global/fonts.scss";
+@import "global/global.scss";
 
 //blocks
-@import "./blocks/page.scss";
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
