--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,4 +8,7 @@
 //blocks
 @import "blocks/page.scss";
 @import "blocks/container.scss";
+@import "blocks/card";
 @import "blocks/header.scss";
+@import "blocks/about.scss";
+@import "blocks/age.scss";
