--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header">
   <div class="container header__wrapper">
+    <img class="header__logo" src="../img/logo.png" alt="Логотип" width="300" height="auto">
     <h2 class="header__title">
       Сформировать Lorem Ipsum текст-заполнитель
     </h2>
