--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,45 +1,50 @@
 .header {
-  height: 25vh;
-  background-image: url("../img/header-1.jpg");
-  background-position: center bottom;
-  background-size: cover;
-  background-repeat: no-repeat;
+  height: 500px;
+  background-color: #484283;
 
   &__wrapper {
-    padding-top: 10vh;
+    display: block;
+    padding-bottom: 20px;
+    height: 100%;
   }
 
   &__title {
-    max-width: 50%;
+    margin-top: 7%;
+    max-width: 60%;
+    font-size: 50px;
     color: $basic-white;
-    -webkit-text-stroke: 0.5px $basic-black;
+  }
+
+  &__logo {
+    display: block;
+    margin: 0 auto;
   }
 }
 
-@media (min-width: $tablet-width) {
-  .header {
-    height: 40vh;
-
-    &__wrapper {
-      padding-top: 20vh;
-    }
-
-    &__title {
-      font-size: 24px;
-    }
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .header {
-    height: 60vh;
-
-    &__wrapper {
-      padding-top: 20vh;
-    }
-
-    &__title {
-      font-size: 50px;
-    }
-  }
-}
+//@media (min-width: $tablet-width) {
+//  .header {
+//    height: 40vh;
+//
+//    &__wrapper {
+//      padding-top: 20vh;
+//    }
+//
+//    &__title {
+//      font-size: 24px;
+//    }
+//  }
+//}
+//
+//@media (min-width: $desktop-width) {
+//  .header {
+//    height: 500px;
+//
+//    &__wrapper {
+//      padding-top: 15vh;
+//    }
+//
+//    &__title {
+//      font-size: 50px;
+//    }
+//  }
+//}
