--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -1,7 +1,7 @@
 html {
   height: 100%;
   font-family: "Arial", sans-serif;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 h1,
@@ -10,6 +10,10 @@ h3,
 h4,
 h5 {
   font-family: 'Russo One', sans-serif;
+}
+
+h2 {
+  font-size: 30px;
 }
 
 .visually-hidden:not(:focus):not(:active),
